@@ -6,20 +6,17 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.*;
 import java.util.*;
-import java.util.stream.Collectors;
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.datarocks.lwgs.commons.filewatcher.exception.WatchDirNotAccessibleException;
 
 @Slf4j
 public class FileWatcher {
-  private WatchService watcher = null;
+  private final WatchService watcher;
   private final Path path;
 
-  public FileWatcher(Path path) throws WatchDirNotAccessibleException {
-    this(path, false);
-  }
-
-  public FileWatcher(Path path, boolean createDirectories) throws WatchDirNotAccessibleException {
+  public FileWatcher(@NonNull final Path path, boolean createDirectories)
+      throws WatchDirNotAccessibleException {
     try {
       this.watcher = FileSystems.getDefault().newWatchService();
       File dir = path.toFile();
@@ -28,8 +25,8 @@ public class FileWatcher {
       }
       this.path = path;
       // ENTRY_DELETE, ENTRY_MODIFY
-      WatchKey key = path.register(watcher, ENTRY_CREATE);
-      log.debug("File watcher initialised.");
+      final WatchKey key = path.register(watcher, ENTRY_CREATE);
+      log.debug("File watcher initialised [key: {}].", key);
     } catch (IOException ioException) {
       log.error("Couldn't start fileWatcher, msg:", ioException);
       throw new WatchDirNotAccessibleException(path.toString(), ioException);
@@ -48,7 +45,7 @@ public class FileWatcher {
     String filename = ev.context().toString();
 
     return FileEvent.builder()
-        .filename(Paths.get(this.path.toString(), filename).toString())
+        .filename(Paths.get(path.toString(), filename).toString())
         .eventType(kind.name())
         .build();
   }
@@ -56,11 +53,11 @@ public class FileWatcher {
   public List<FileEvent> poll() {
     log.debug("polling.");
 
-    if (this.watcher == null) {
+    if (watcher == null) {
       return Collections.emptyList();
     }
 
-    WatchKey key = this.watcher.poll();
+    final WatchKey key = watcher.poll();
 
     if (key == null) {
       return Collections.emptyList();
@@ -70,7 +67,7 @@ public class FileWatcher {
         Optional.ofNullable(key.pollEvents()).orElse(Collections.emptyList()).stream()
             .map(this::processEvent)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
     key.reset();
     return events;
